Imperius Counter prototype

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Banco do Balas",
-  "name": "Banco do Balas",
+  "short_name": "Imperius Counter",
+  "name": "Imperius Counter",
   "icons": [
     {
       "src": "/images/logo_BB.png",
